--- a/.azuredevops/pipelines/uninstall-selfhosted-agents-helm.template.yml
+++ b/.azuredevops/pipelines/uninstall-selfhosted-agents-helm.template.yml
@@ -73,7 +73,7 @@ parameters:
     default: true # Set to true to use on-premises agents, false to use cloud agents
 
 variables:
-  - group: __AZURE_DEVOPS_VARIABLE_GROUP__
+  - group: "__AZURE_DEVOPS_VARIABLE_GROUP__" # to get AZDO_PAT
   - name: azureSubscription
     value: ${{ parameters.AZURE_SERVICE_CONNECTION }}
 
