--- a/.azuredevops/pipelines/validate-selfhosted-agents-helm.template.yml
+++ b/.azuredevops/pipelines/validate-selfhosted-agents-helm.template.yml
@@ -30,7 +30,7 @@ resources:
       trigger: true # automatic trigger on successful run of source pipeline
 
 variables:
-  - group: __AZURE_DEVOPS_VARIABLE_GROUP__ # to get AZDO_PAT
+  - group: "__AZURE_DEVOPS_VARIABLE_GROUP__" # to get AZDO_PAT
   - name: samplePipelineNameHelm
     value: __RUN_ON_POOL_SAMPLE_PIPELINE_NAME__ # changed to helm pipeline name
 
